adding form submit ajax and RPC

--- a/helloworld/test/testform.html
+++ b/helloworld/test/testform.html
@@ -142,7 +142,7 @@
 									<input id="expectedArrivalDate" name="expectedArrivalDate" type="date" required />
 								</li>
 								<li>
-									<label for="expectedArrival">Expected arrival time</label>
+									<label for="expectedArrivalTime">Expected arrival time</label>
 									<input id="expectedArrivalTime" name="expectedArrivalTime" type="time" required />
 								</li>
 								<li>
